--- a/allplasticworld/package.json
+++ b/allplasticworld/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.15.15",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@types/three": "^0.160.0",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
