--- a/allplasticworld/package.json
+++ b/allplasticworld/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
     "@react-three/fiber": "^8.15.15",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/three": "^0.160.0",
